# restricted-io

./: CHANGELOG.md  README.md  restricted-io.cabal
.github/workflows/: ci.yml
src/: Example.hs  RestrictedIO.hs
src/RestrictedIO/: Cell.hs  Core.hs  TypeSet.hs
src/RestrictedIO/TypeLevel/: Set.hs  Shenanigans.hs
test/: ExampleSpec.hs
test/Example/: DeployDrones.hs  FireMissiles.hs
