cabal-version:       2.4
name:                restricted-io
version:             0.0.0.0
synopsis:            IO monad with capability lists
description:
    IO monad with capability lists.
    See [README.md](https://github.com/gusbicalho/restricted-io#restricted-io) for more details.
homepage:            https://github.com/gusbicalho/restricted-io
bug-reports:         https://github.com/gusbicalho/restricted-io/issues
license:             MIT
license-file:        LICENSE
author:              Gustavo Bicalho
maintainer:          Gustavo Bicalho <gusbicalho@gmail.com>
copyright:           2020 Gustavo Bicalho
category:            Control
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.2

source-repository head
  type:                git
  location:            https://github.com/gusbicalho/restricted-io.git

common common-options
  build-depends:       base ^>= 4.14.0.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     RestrictedIO
                       RestrictedIO.Cell
  other-modules:       RestrictedIO.TypeLevel.Set
                       RestrictedIO.TypeLevel.Shenanigans

test-suite restricted-io-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-tool-depends:  hspec-discover:hspec-discover == 2.*
  build-depends:       restricted-io
                     , hspec
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  other-modules:       Example.DeployDrones
                       Example.FireMissiles
                       ExampleSpec
